--- a/Roeivereniging/View/View.csproj
+++ b/Roeivereniging/View/View.csproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Control\Control.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\Viewmodel\Viewmodel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
