--- a/Roeivereniging/Model/Model.csproj
+++ b/Roeivereniging/Model/Model.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FluentEmail.Mailgun" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.13" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
